@@ -5,9 +5,11 @@ import io.cucumber.java.Transpose;
 import io.cucumber.java.en.And;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
+import it.pagopa.pn.client.b2b.generated.openapi.clients.delivery2b.model.FullReceivedNotificationV24;
 import it.pagopa.pn.client.b2b.pa.PnPaB2bUtils;
 import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementCategoryV23;
-import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV24;
+import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV23;
+import it.pagopa.pn.client.b2b.pa.generated.openapi.clients.externalb2bpa.model.TimelineElementV25;
 import it.pagopa.pn.client.b2b.pa.service.IPnWebMandateClient;
 import it.pagopa.pn.client.b2b.pa.service.IPnWebRecipientClient;
 import it.pagopa.pn.client.b2b.pa.service.impl.B2BRecipientExternalClientImpl;
@@ -15,7 +17,6 @@ import it.pagopa.pn.client.b2b.pa.service.impl.B2bMandateServiceClientImpl;
 import it.pagopa.pn.client.b2b.pa.service.impl.PnWebMandateExternalClientImpl;
 import it.pagopa.pn.client.b2b.pa.service.utils.SettableBearerToken;
 import it.pagopa.pn.client.web.generated.openapi.clients.externalMandate.model.*;
-import it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.FullReceivedNotificationV23;
 import it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.NotificationAttachmentDownloadMetadataResponse;
 import it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.NotificationSearchResponse;
 import it.pagopa.pn.cucumber.steps.SharedSteps;
@@ -88,7 +89,6 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     private String getTaxIdByUser(String user) {
-
         return switch (user) {
             case "Mario Cucumber" -> marioCucumberTaxID;
             case "Mario Gherkin" -> marioGherkinTaxID;
@@ -100,12 +100,13 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     private UserDto getUserDtoByuser(String user) {
-
         return switch (user.trim().toLowerCase()) {
-            case "mario cucumber" -> createUserDto("Mario Cucumber", "Mario","Cucumber", marioCucumberTaxID, null, true);
+            case "mario cucumber" ->
+                    createUserDto("Mario Cucumber", "Mario", "Cucumber", marioCucumberTaxID, null, true);
             case "mario gherkin" -> createUserDto("Mario Gherkin", "Mario", "Gherkin", marioGherkinTaxID, null, true);
             case "gherkinsrl" -> createUserDto("gherkinsrl", "gherkin", "srl", gherkinSrltaxId, "gherkinsrl", false);
-            case "cucumberspa" -> createUserDto("cucumberspa", "cucumber", "spa", cucumberSpataxId, "cucumberspa", false);
+            case "cucumberspa" ->
+                    createUserDto("cucumberspa", "cucumber", "spa", cucumberSpataxId, "cucumberspa", false);
             default -> throw new IllegalArgumentException();
         };
     }
@@ -136,9 +137,7 @@ public class RicezioneNotificheWebDelegheSteps {
                 .datefrom(sdf.format(new Date()))
                 .visibilityIds(new LinkedList<>())
                 .status(MandateDto.StatusEnum.PENDING)
-                .dateto(sdf.format(DateUtils.addDays(new Date(), 1))
-                );
-
+                .dateto(sdf.format(DateUtils.addDays(new Date(), 1)));
         System.out.println("MANDATE: " + mandate);
         try {
             webMandateClient.createMandate(mandate);
@@ -159,7 +158,6 @@ public class RicezioneNotificheWebDelegheSteps {
                 .visibilityIds(new LinkedList<>())
                 .status(MandateDto.StatusEnum.PENDING)
                 .dateto(sdf.format(DateUtils.addDays(new Date(), 1)));
-
         System.out.println("MANDATE: " + mandate);
         try {
             webMandateClient.createMandate(mandate);
@@ -179,8 +177,7 @@ public class RicezioneNotificheWebDelegheSteps {
                 .dateto(sdf.format(new Date()))
                 .visibilityIds(new LinkedList<>())
                 .status(MandateDto.StatusEnum.PENDING)
-                .datefrom(sdf.format(DateUtils.addDays(new Date(), 1))
-                );
+                .datefrom(sdf.format(DateUtils.addDays(new Date(), 1)));
         System.out.println("MANDATE: " + mandate);
         try {
             webMandateClient.createMandate(mandate);
@@ -193,7 +190,6 @@ public class RicezioneNotificheWebDelegheSteps {
     public void delegateUser(String delegate, String delegator, String comune) {
         setBearerToken(delegator);
         OrganizationIdDto organizationIdDto = new OrganizationIdDto();
-
         switch (comune) {
             case "Comune_1" -> organizationIdDto
                     .name("Comune di Milano")
@@ -212,21 +208,17 @@ public class RicezioneNotificheWebDelegheSteps {
                     .uniqueIdentifier(senderIdROOT);
             default -> throw new IllegalStateException();
         }
-
-
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
         MandateDto mandate = (new MandateDto()
                 .delegator(getUserDtoByuser(delegator))
                 .delegate(getUserDtoByuser(delegate))
                 .verificationCode(verificationCode)
                 .datefrom(sdf.format(new Date()))
-                .visibilityIds(Arrays.asList(organizationIdDto))
+                .visibilityIds(List.of(organizationIdDto))
                 .status(MandateDto.StatusEnum.PENDING)
                 .dateto(sdf.format(DateUtils.addDays(new Date(), 1)))
         );
-
         System.out.println("MANDATE: " + mandate);
-
         try {
             webMandateClient.createMandate(mandate);
         } catch (HttpStatusCodeException e) {
@@ -245,9 +237,7 @@ public class RicezioneNotificheWebDelegheSteps {
     public void userRejectIfPresentMandateOfAnotheruser(String delegate, String delegator) {
         setBearerToken(delegate);
         String delegatorTaxId = getTaxIdByUser(delegator);
-
-        List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId,null);
-
+        List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
         MandateDto mandateDto = null;
         for (MandateDto mandate : mandateList) {
             log.debug("MANDATE-LIST: {}", mandateList);
@@ -259,7 +249,6 @@ public class RicezioneNotificheWebDelegheSteps {
         if (mandateDto != null) {
             MandateDto finalMandateDto = mandateDto;
             Assertions.assertDoesNotThrow(() -> webMandateClient.rejectMandate(finalMandateDto.getMandateId()));
-
         }
     }
 
@@ -267,29 +256,23 @@ public class RicezioneNotificheWebDelegheSteps {
     public void userAcceptsMandateOfAnotherUser(String delegate, String delegator) {
         setBearerToken(delegate);
         String delegatorTaxId = getTaxIdByUser(delegator);
-
         List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
         System.out.println("MANDATE-LIST: " + mandateList);
         MandateDto mandateDto = mandateList.stream().filter(mandate -> Objects.requireNonNull(mandate.getDelegator()).getFiscalCode() != null && mandate.getDelegator().getFiscalCode().equalsIgnoreCase(delegatorTaxId)).findFirst().orElse(null);
-
         Assertions.assertNotNull(mandateDto);
         this.mandateToSearch = mandateDto;
         Assertions.assertDoesNotThrow(() -> webMandateClient.acceptMandate(mandateDto.getMandateId(), new AcceptRequestDto().verificationCode(verificationCode)));
-
     }
 
     @And("{string} accetta la delega {string} associando un gruppo")
     public void userAcceptsMandateWithGroups(String delegate, String delegator) {
         setBearerToken(delegate);
         String delegatorTaxId = getTaxIdByUser(delegator);
-
         List<MandateDto> mandateList = webMandateClient.searchMandatesByDelegate(delegatorTaxId, null);
         System.out.println("MANDATE-LIST: " + mandateList);
         MandateDto mandateDto = mandateList.stream().filter(mandate -> Objects.requireNonNull(mandate.getDelegator()).getFiscalCode() != null && mandate.getDelegator().getFiscalCode().equalsIgnoreCase(delegatorTaxId)).findFirst().orElse(null);
-
         Assertions.assertNotNull(mandateDto);
         this.mandateToSearch = mandateDto;
-
         List<HashMap<String, String>> resp = sharedSteps.getPnExternalServiceClient().pgGroupInfo(webRecipientClient.getBearerTokenSetted());
         String gruppoAttivo = null;
         if (resp != null && !resp.isEmpty()) {
@@ -300,28 +283,23 @@ public class RicezioneNotificheWebDelegheSteps {
                 }
             }
         }
-
         AcceptRequestDto acceptRequestDto = new AcceptRequestDto().verificationCode(verificationCode).groups(List.of(gruppoAttivo));
         Assertions.assertDoesNotThrow(() -> webMandateClient.acceptMandate(mandateDto.getMandateId(), acceptRequestDto));
-
     }
 
     @And("la notifica può essere correttamente letta da {string} con delega")
     public void notificationCanBeCorrectlyReadFromWithMandate(String recipient) {
         sharedSteps.selectUser(recipient);
-        Assertions.assertDoesNotThrow(() -> {
-            webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), mandateToSearch.getMandateId());
-        });
+        Assertions.assertDoesNotThrow(() ->
+                webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), mandateToSearch.getMandateId()));
     }
 
     @Then("come delegante {string} l'associazione a gruppi sulla delega di {string}")
     public void removeGrups(String delegator, String delegate) {
         sharedSteps.selectUser(delegator);
-
         UpdateRequestDto updateRequestDto = new UpdateRequestDto();
         updateRequestDto.setGroups(new LinkedList<>());
-
-        Assertions.assertDoesNotThrow(() -> webMandateClient.updateMandate( mandateToSearch.getMandateId(), updateRequestDto));
+        Assertions.assertDoesNotThrow(() -> webMandateClient.updateMandate(mandateToSearch.getMandateId(), updateRequestDto));
     }
 
     @Then("come amministratore {string} associa alla delega il primo gruppo disponibile attivo per il delegato {string}")
@@ -517,29 +495,22 @@ public class RicezioneNotificheWebDelegheSteps {
     @And("lato destinatario la notifica può essere correttamente recuperata da {string} e verifica presenza dell'evento di timeline NOTIFICATION_RADD_RETRIEVED")
     public void notificationCanBeCorrectlyReadFromBytimeline(String recipient) {
         sharedSteps.selectUser(recipient);
-
         try {
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23 timelineElementCategoryV23 =
-                    it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23.NOTIFICATION_RADD_RETRIEVED;
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementV23 timelineElement = getTimelineElementV23WebRecipient(timelineElementCategoryV23);
-
+            TimelineElementCategoryV23 timelineElementCategoryV23 = TimelineElementCategoryV23.NOTIFICATION_RADD_RETRIEVED;
+            TimelineElementV23 timelineElement = getTimelineElementV23WebRecipient(timelineElementCategoryV23);
             Assertions.assertNotNull(timelineElement);
         } catch (AssertionFailedError assertionFailedError) {
             sharedSteps.throwAssertFailerWithIUN(assertionFailedError);
         }
-
         webRecipientClient.setBearerToken(baseUser);
     }
 
     @And("lato desinatario {string} viene verificato che l'elemento di timeline NOTIFICATION_VIEWED non esista")
     public void notificationCanBeCorrectlyReadFromBytimelineNotExist(String recipient) {
         sharedSteps.selectUser(recipient);
-
         try {
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23 timelineElementCategoryV23 =
-                    it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23.NOTIFICATION_VIEWED;
-            it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementV23 timelineElement = getTimelineElementV23WebRecipient(timelineElementCategoryV23);
-
+            TimelineElementCategoryV23 timelineElementCategoryV23 = TimelineElementCategoryV23.NOTIFICATION_VIEWED;
+            TimelineElementV23 timelineElement = getTimelineElementV23WebRecipient(timelineElementCategoryV23);
             Assertions.assertNull(timelineElement);
         } catch (AssertionFailedError assertionFailedError) {
             sharedSteps.throwAssertFailerWithIUN(assertionFailedError);
@@ -547,11 +518,9 @@ public class RicezioneNotificheWebDelegheSteps {
         webRecipientClient.setBearerToken(baseUser);
     }
 
-    private it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementV23 getTimelineElementV23WebRecipient(it.pagopa.pn.client.web.generated.openapi.clients.externalWebRecipient.model.TimelineElementCategoryV23 timelineElementCategoryV23) {
-
-        FullReceivedNotificationV23 result = webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), null);
+    private TimelineElementV23 getTimelineElementV23WebRecipient(TimelineElementCategoryV23 timelineElementCategoryV23) {
+        FullReceivedNotificationV24 result = webRecipientClient.getReceivedNotification(sharedSteps.getSentNotification().getIun(), null);
         log.info("NOTIFICATION_TIMELINE: " + sharedSteps.getSentNotification().getTimeline());
-
         return result
                 .getTimeline()
                 .stream()
@@ -571,11 +540,12 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     private NotificationSearchResponse notificationSearchResponse;
+
     @And("{string} visualizza l'elenco delle notifiche per comune {string}")
     public void notificationCanBeCorrectlyReadFromAtPa(String recipient, String pa, @Transpose RicezioneNotificheWebSteps.NotificationSearchParam searchParam) {
         sharedSteps.selectPA(pa);
         sharedSteps.selectUser(recipient);
-        try{
+        try {
             this.notificationSearchResponse = webRecipientClient.searchReceivedNotification(searchParam.startDate, searchParam.endDate, searchParam.mandateId /*mandateId = null by default*/,
                     searchParam.senderId, searchParam.status, searchParam.subjectRegExp,
                     searchParam.iunMatch, searchParam.size, null);
@@ -589,7 +559,7 @@ public class RicezioneNotificheWebDelegheSteps {
     public void notificationCanBeCorrectlyReadFromAtPa(String user, String recipient, String pa, @Transpose RicezioneNotificheWebSteps.NotificationSearchParam searchParam) {
         sharedSteps.selectPA(pa);
         sharedSteps.selectUser(user);
-        try{
+        try {
             this.notificationSearchResponse = webRecipientClient.searchReceivedDelegatedNotification(
                     searchParam.startDate, searchParam.endDate, getRecipientId(recipient),
                     null, searchParam.senderId, searchParam.status,
@@ -601,8 +571,8 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     //TODO: insert recipientID da selfcare (si possono recuperare dai token)
-    private String getRecipientId(String recipientId){
-        return switch (recipientId.toLowerCase().trim()){
+    private String getRecipientId(String recipientId) {
+        return switch (recipientId.toLowerCase().trim()) {
             case "mario cucumber" -> "123";
             case "mario gherkin" -> "345";
             case "gherkinsrl" -> "789";
@@ -612,15 +582,14 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     @And("Si verifica che il numero di notifiche restituite nella pagina sia {int}")
-    public void verifyNumberOfNotification(Integer number){
-        Assertions.assertEquals(notificationSearchResponse.getResultsPage().size(),number);
+    public void verifyNumberOfNotification(Integer number) {
+        Assertions.assertEquals(notificationSearchResponse.getResultsPage().size(), number);
     }
 
 
     @And("si verifica che l'elemento di timeline della lettura riporti i dati di {string}")
     public void siVerificaCheLElementoDiTimelineDellaLetturaRiportiIDatiDi(String user) {
-        TimelineElementV24 timelineElement = getTimelineElementV23();
-
+        TimelineElementV25 timelineElement = getTimelineElement();
         String userTaxId = getTaxIdByUser(user);
         System.out.println("TIMELINE ELEMENT: " + timelineElement);
         Assertions.assertNotNull(timelineElement);
@@ -631,22 +600,20 @@ public class RicezioneNotificheWebDelegheSteps {
 
     @And("si verifica che l'elemento di timeline della lettura non riporti i dati del delegato")
     public void siVerificaCheLElementoDiTimelineDellaLetturaNonRiportiIDatiDi() {
-        TimelineElementV24 timelineElement = getTimelineElementV23();
-
+        TimelineElementV25 timelineElement = getTimelineElement();
         System.out.println("TIMELINE ELEMENT: " + timelineElement);
         Assertions.assertNotNull(timelineElement);
         Assertions.assertNotNull(timelineElement.getDetails());
         Assertions.assertNull(timelineElement.getDetails().getDelegateInfo());
     }
 
-    private TimelineElementV24 getTimelineElementV23() {
+    private TimelineElementV25 getTimelineElement() {
         try {
             await().atMost(sharedSteps.getWorkFlowWait() * 2, TimeUnit.MILLISECONDS);
         } catch (RuntimeException exception) {
             exception.printStackTrace();
         }
         sharedSteps.setSentNotification(sharedSteps.getB2bClient().getSentNotification(sharedSteps.getSentNotification().getIun()));
-
         return sharedSteps
                 .getSentNotification()
                 .getTimeline()
@@ -664,14 +631,14 @@ public class RicezioneNotificheWebDelegheSteps {
 
     @Then("il delegato {string} visualizza le deleghe a suo carico con stato {string}")
     public void delegateViewsAssignedMandatesWithStatus(String user, String status) {
-        try{
+        try {
             delegateViewMandate(user, status);
         } catch (HttpStatusCodeException e) {
-        this.notificationError = e;
+            this.notificationError = e;
         }
     }
 
-    private void delegateViewMandate(String user, String statusFilter){
+    private void delegateViewMandate(String user, String statusFilter) {
         setBearerToken(user);
         try {
             List<MandateDto> mandateList = webMandateClient.listMandatesByDelegate1(statusFilter);
@@ -720,7 +687,7 @@ public class RicezioneNotificheWebDelegheSteps {
         setBearerToken(user);
 
         List<MandateDto> mandateList = webMandateClient.listMandatesByDelegate1(null);
-        List<MandateDto> mandateDtos = Assertions.assertDoesNotThrow(()-> webMandateClient.listMandatesByDelegator1());
+        List<MandateDto> mandateDtos = Assertions.assertDoesNotThrow(() -> webMandateClient.listMandatesByDelegator1());
 
         System.out.println("TOKEN SETTED (user: +" + user + ") : " + webMandateClient.getBearerTokenSetted());
         System.out.println("MANDATE-LIST (user: +" + user + ") : " + mandateList);
@@ -730,35 +697,40 @@ public class RicezioneNotificheWebDelegheSteps {
 
     @And("viene creata una delega con i seguenti parametri errati:")
     public void createMandateWithNotValidDate(Map<String, String> data) {
-            setBearerToken(data.get("delegator"));
-            SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
-            MandateDto mandate = new MandateDto()
-                    .delegator(getUserDtoByuser(data.get("delegator")))
-                    .delegate(Optional.ofNullable(data.get("delegate")).map(this::getInvalidUserDto).orElse(getUserDtoByuser("mario gherkin")))
-                    .verificationCode(verificationCode)
-                    .datefrom(data.getOrDefault("dateFrom", sdf.format(new Date())))
-                    .visibilityIds(new LinkedList<>())
-                    .status(MandateDto.StatusEnum.PENDING)
-                    .dateto(data.getOrDefault("dateTo", sdf.format(DateUtils.addDays(new Date(), 1))));
+        setBearerToken(data.get("delegator"));
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+        MandateDto mandate = new MandateDto()
+                .delegator(getUserDtoByuser(data.get("delegator")))
+                .delegate(Optional.ofNullable(data.get("delegate")).map(this::getInvalidUserDto).orElse(getUserDtoByuser("mario gherkin")))
+                .verificationCode(verificationCode)
+                .datefrom(data.getOrDefault("dateFrom", sdf.format(new Date())))
+                .visibilityIds(new LinkedList<>())
+                .status(MandateDto.StatusEnum.PENDING)
+                .dateto(data.getOrDefault("dateTo", sdf.format(DateUtils.addDays(new Date(), 1))));
 
-            System.out.println("MANDATE: " + mandate);
-            try {
-                webMandateClient.createMandate(mandate);
-            } catch (HttpStatusCodeException e) {
-                this.notificationError = e;
-            }
+        System.out.println("MANDATE: " + mandate);
+        try {
+            webMandateClient.createMandate(mandate);
+        } catch (HttpStatusCodeException e) {
+            this.notificationError = e;
         }
+    }
 
     private UserDto getInvalidUserDto(String delegator) {
         return switch (delegator) {
             case "EMPTY_FISCAL_CODE" -> createUserDto("Mario Cucumber", "Mario", "Cucumber", null, null, true);
-            case "INVALID_FISCAL_CODE" ->  createUserDto("Mario Cucumber", "Mario", "Cucumber", "AAA8090ZAC", null, true);
-            case "EMPTY_FIRST_NAME" -> createUserDto("Mario Cucumber", null, "Cucumber", "CLMCST42R12D969Z", null, true);
+            case "INVALID_FISCAL_CODE" ->
+                    createUserDto("Mario Cucumber", "Mario", "Cucumber", "AAA8090ZAC", null, true);
+            case "EMPTY_FIRST_NAME" ->
+                    createUserDto("Mario Cucumber", null, "Cucumber", "CLMCST42R12D969Z", null, true);
             case "EMPTY_LAST_NAME" -> createUserDto("Mario Cucumber", "Mario", null, "CLMCST42R12D969Z", null, true);
-            case "FIRST_NAME_NOT_VALID" -> createUserDto("Cristoforo Colombo", "PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "Colombo", "FRMTTR76M06B715E", null, true);
-            case "LAST_NAME_NOT_VALID" -> createUserDto("Cristoforo Colombo", "Cristoforo", "PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "FRMTTR76M06B715E", null, true);
+            case "FIRST_NAME_NOT_VALID" ->
+                    createUserDto("Cristoforo Colombo", "PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "Colombo", "FRMTTR76M06B715E", null, true);
+            case "LAST_NAME_NOT_VALID" ->
+                    createUserDto("Cristoforo Colombo", "Cristoforo", "PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "FRMTTR76M06B715E", null, true);
             case "EMPTY_DISPLAY_NAME" -> createUserDto(null, "Mario", "Cucumber", "CLMCST42R12D969Z", null, true);
-            case "DISPLAY_NAME_NOT_VALID" -> createUserDto("PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "Mario", "Cucumber", "CLMCST42R12D969Z", null, true);
+            case "DISPLAY_NAME_NOT_VALID" ->
+                    createUserDto("PippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippoPippo", "Mario", "Cucumber", "CLMCST42R12D969Z", null, true);
             default -> throw new IllegalStateException("Unexpected value: " + delegator);
         };
     }
@@ -776,7 +748,7 @@ public class RicezioneNotificheWebDelegheSteps {
     }
 
     private UserDto createUserDto(String displayName, String firstName, String lastName, String fiscalCode, String companyName, boolean isPerson) {
-    return new UserDto()
+        return new UserDto()
                 .displayName(displayName)
                 .firstName(firstName)
                 .lastName(lastName)
